# Game_Engine

./: .gitignore  .gitmodules  CMakeLists.txt
AeroEditor/: CMakeLists.txt
AeroEditor/include/: EditorLayer.hpp
AeroEditor/include/Application/: AppSettings.hpp  EditorApp.hpp  EditorLayer.hpp  ProjectManagerApp.hpp  ProjectManagerLayer.hpp
AeroEditor/include/Manager/: ProjectManager.hpp
AeroEditor/include/Panels/: ScenePanel.hpp
AeroEditor/src/: App.cpp  EditorApp.cpp  EditorLayer.cpp
AeroEditor/src/Application/: AppSettings.cpp  EditorApp.cpp  EditorLayer.cpp  ProjectManagerApp.cpp  ProjectManagerLayer.cpp
AeroEditor/src/Panels/: ScenePanel.cpp
Application/: CMakeLists.txt
Application/assets/shaders/: Circle2D.glsl  Rectangle2D.glsl  Sprite2D.glsl  rectangle.glsl  texture.glsl
Application/include/: Aero.hpp  Apch.hpp  Application.h  Application.hpp  EntryPoint.hpp  Helper.hpp  Input.hpp  Log.hpp  Windows.hpp
Application/include/Core/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  Log.hpp  TimeStamp.hpp  Windows.hpp
Application/include/Events/: Event.hpp  KeyCodes.hpp  KeyEvent.hpp  MouseCodes.hpp  MouseEvent.hpp  WindowEvent.hpp
Application/include/GameObjects/: AnimatedSpriteNode.hpp  CircleNode.hpp  GameObjects.hpp  Node.hpp  NodeFactory.hpp  RectangleNode.hpp  SpriteNode.hpp
Application/include/GameObjects/Node/: AnimatedSpriteNode.hpp  CameraComponent.hpp  CircleNode.hpp  RectangleNode.hpp  SpriteNode.hpp
Application/include/ImGui/: ImGuiLayer.hpp
Application/include/Layers/: Layer.hpp  LayerStack.hpp
Application/include/Math/: Calculation.hpp  Math.hpp  Rect.hpp  vec2.hpp  vec3.hpp  vec4.hpp
Application/include/Platform/OpenGL/: OpenGLContext.hpp  OpenGLFrameBuffer.hpp  OpenGLIndexBuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.hpp
Application/include/Platform/Window/: WindowsWindow.hpp
Application/include/Project/: FileDialogs.hpp  Project.hpp  SaveScene.hpp
Application/include/Renderer/: BufferLayout.hpp  Color.hpp  FrameBuffer.hpp  GraphicsContext.hpp  IndexBuffer.hpp  OrthoCameraController.hpp  OrthographicCamera.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp  ViewController.hpp
Application/include/Scene/: Entity.hpp  Scene.hpp  SceneComponent.hpp
Application/include/Scripting/: LuaManager.hpp  ScriptComponent.hpp
Application/include/UI/: DrawUI.hpp
Application/shaders/: triangle.fragment  triangle.vertex
Application/src/: Application.cpp  EntryPoint.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  WindowInput.cpp  WindowsWindow.cpp
Application/src/Core/: Application.cpp  EntryPoint.cpp  Log.cpp
Application/src/GameObjects/: NodeFactory.cpp
Application/src/ImGui/: ImGuiLayer.cpp
Application/src/Layers/: Layer.cpp  LayerStack.cpp
Application/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp  VertexArray.cpp
Application/src/Platform/WindowsWindow/: WindowInput.cpp  WindowsWindow.cpp
Application/src/Project/: FileDialogs.cpp  Project.cpp  SaveScene.cpp
Application/src/Renderer/: Color.cpp  FrameBuffer.cpp  IndexBuffer.cpp  OrthoCameraController.cpp  OrthographicCamera.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  View.cpp  ViewController.cpp
Application/src/Scene/: Entity.cpp  Scene.cpp
Application/src/Scripting/: LuaManager.cpp
Engine/: CMakeLists.txt
Engine/src/: main.cpp
Graphics/: CMakeLists.txt
Graphics/include/: BatchRectangle.h
Graphics/src/: BatchRectangle.cpp  Color.cpp
ImGui File/Debug/: imgui.ini
Sandbox/: CMakeLists.txt
Sandbox/include/: AppSettings.hpp  Sandbox2D.hpp
Sandbox/src/: AppSettings.cpp  Sandbox2D.cpp  sandbox.cpp
System/: CMakeLists.txt
System/include/: Angle.hpp  Keyboard.hpp  Mouse.hpp  Vector2.hpp
System/src/: Angle.cpp
